# torchdebug-env

./: .dockerignore  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  __init__.py  client.py  graders.py  inference.py  models.py  openenv.yaml  presubmit.py  pyproject.toml  rubrics.py
outputs/evals/: baseline_results.json  submission_report.json
scenarios/: __init__.py  basic_failures.py  performance_issues.py  subtle_bugs.py
scripts/: validate-submission.sh
server/: Dockerfile  __init__.py  app.py  gradio_ui.py  torchdebug_environment.py
tests/: test_environment_flow.py  test_reward.py
utils/: __init__.py  reward.py
